Actualizar rutas de importación de imágenes en la página del teatro Tronador y agregar nuevas imágenes.

--- a/src/pages/en/projects/theaters/teatro-tronador.astro
+++ b/src/pages/en/projects/theaters/teatro-tronador.astro
@@ -4,11 +4,11 @@ import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import tronador1 from '../../../../img/projects/tronador/tronador1.webp';
-import tronador2 from '../../../../img/projects/tronador/tronador2.webp';
-import tronador3 from '../../../../img/projects/tronador/tronador3.webp';
-import tronador4 from '../../../../img/projects/tronador/tronador4.webp';
-import tronador5 from '../../../../img/projects/tronador/tronador5.webp';
+import tronador1 from '../../../../img/projects/tronador/tronador1.jpg';
+import tronador2 from '../../../../img/projects/tronador/tronador2.jpg';
+import tronador3 from '../../../../img/projects/tronador/tronador3.jpg';
+import tronador4 from '../../../../img/projects/tronador/tronador4.jpg';
+import tronador5 from '../../../../img/projects/tronador/tronador5.jpg';
 import tronador6 from '../../../../img/projects/tronador/tronador6.webp';
 import tronador7 from '../../../../img/projects/tronador/tronador7.webp';
 import tronador8 from '../../../../img/projects/tronador/tronador8.webp';
@@ -25,6 +25,8 @@ import tronador18 from '../../../../img/projects/tronador/tronador18.webp';
 import tronador19 from '../../../../img/projects/tronador/tronador19.webp';
 import tronador20 from '../../../../img/projects/tronador/tronador20.webp';
 import tronador21 from '../../../../img/projects/tronador/tronador21.webp';
+import tronador22 from '../../../../img/projects/tronador/tronador22.webp';
+import tronador23 from '../../../../img/projects/tronador/tronador23.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
@@ -62,25 +64,25 @@ const images = [
     {
         largeURL: tronador2.src,
         thumbnailURL: tronador2.src,
-        width: 1428,
+        dth: 1428,
         height: 660,
     },
     {
         largeURL: tronador3.src,
         thumbnailURL: tronador3.src,
-        width: 1430,
+        dth: 1428,
         height: 660,
     },
     {
         largeURL: tronador4.src,
         thumbnailURL: tronador4.src,
-        width: 933,
+        dth: 1428,
         height: 660,
     },
     {
         largeURL: tronador5.src,
         thumbnailURL: tronador5.src,
-        width: 832,
+        dth: 1428,
         height: 660,
     },
     {
@@ -177,6 +179,18 @@ const images = [
         largeURL: tronador21.src,
         thumbnailURL: tronador21.src,
         width: 845,
+        height: 660,
+    },
+    {
+        largeURL: tronador22.src,
+        thumbnailURL: tronador22.src,
+        width: 1011,
+        height: 660,
+    },
+    {
+        largeURL: tronador23.src,
+        thumbnailURL: tronador23.src,
+        width: 1011,
         height: 660,
     },
 ];
