Actualizar ruta de importación de la imagen en la página del teatro Tronador

--- a/src/pages/projects/theaters/teatro-tronador.astro
+++ b/src/pages/projects/theaters/teatro-tronador.astro
@@ -1,6 +1,6 @@
 ---
 import ProjectPage from '../../../components/ProjectPage.astro';
-import tronador from '../../../../img/projects/tronador.webp';
+import tronador from '../../../img/projects/tronador.webp';
 import Base from '../../../layouts/Base.astro';
 import Layout from '../../../layouts/Layout.astro';
 
